@@ -10,7 +10,7 @@
 	<packaging>jar</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 
-	<name>Java 8/9/10/11 Examples</name>
+	<name>Java 8/9/10/11/12/13/14 Examples</name>
 	<inceptionYear>2017</inceptionYear>
 
 	<build>
@@ -18,8 +18,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.8.1</version>
 				<configuration>
+					<release>14</release>
 				    <compilerArgs>--enable-preview</compilerArgs>
 					<encoding>UTF-8</encoding>
 					<source>14</source>
@@ -36,6 +37,9 @@
 						<version>${junit.platform.version}</version>
 					</dependency>
 				</dependencies>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -57,9 +61,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<description>Java 8/9/10/11/12/14 examples</description>
-
+	<description>Java 8/9/10/11/12/13/14 examples</description>
 	<properties>
 		<junit.jupiter.version>5.4.2</junit.jupiter.version>
 		<junit.platform.version>1.2.0</junit.platform.version>
